--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.539.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
   },
