--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,11 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "carousel": "^0.0.3",
     "flowbite-react": "^0.12.7",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.427.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.8.2",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
   },
