--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
